--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,72 @@
-django==4.1.2
-djangorestframework
-django-filter
-drf-yasg
-django-cors-headers
-gunicorn
-pymysql
-django-ses
-django-redis
-django-storages
-djangorestframework-simplejwt
-django-resized
-apns2
-pillow
+apns2==0.7.2
+asgiref==3.7.2
+async-timeout==4.0.2
+boto3==1.26.148
+botocore==1.29.148
+CacheControl==0.13.0
+cachetools==5.3.1
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==41.0.1
+Django==4.2.2
+django-cors-headers==4.0.0
+django-filter==23.2
+django-redis==5.2.0
+django-resized==1.0.2
+django-ses==3.5.0
+django-storages==1.13.2
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+drf-yasg==1.21.5
+firebase-admin==6.0.0
+google-api-core==2.11.0
+google-api-python-client==2.88.0
+google-auth==2.19.1
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2
+google-cloud-firestore==2.11.1
+google-cloud-storage==2.9.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.0
+grpcio==1.54.2
+grpcio-status==1.54.2
+gunicorn==20.1.0
+h2==2.6.2
+hpack==3.0.0
+httplib2==0.22.0
+hyper==0.7.0
+hyperframe==3.2.0
+idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+jmespath==1.0.1
+MarkupSafe==2.1.3
+msgpack==1.0.5
+mysqlclient==2.1.1
+packaging==23.1
+Pillow==9.5.0
+proto-plus==1.22.2
+protobuf==4.23.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+PyJWT==1.7.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+redis==4.5.5
+requests==2.31.0
+rsa==4.9
+ruamel.yaml==0.17.31
+ruamel.yaml.clib==0.2.7
+s3transfer==0.6.1
+six==1.16.0
+sqlparse==0.4.4
+typing_extensions==4.6.3
+uritemplate==4.1.1
+urllib3==1.26.16
