--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Clean temp directory
       run: |
         rm -rf *
-        cp -r $GITHUB_WORKSPACE 
+        cp -r $GITHUB_WORKSPACE *
 
     - name: archive chatty-api
       run: tar cvfz ./chatty-api.tar.gz *
