--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,46 @@
-apns2==0.7.2
+amqp==5.1.1
 asgiref==3.7.2
 async-timeout==4.0.2
+billiard==4.1.0
+blinker==1.6.2
 boto3==1.26.148
 botocore==1.29.148
+Brotli==1.0.9
 CacheControl==0.13.0
 cachetools==5.3.1
+celery==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+ConfigArgParse==1.5.3
 coreapi==2.3.3
 coreschema==0.0.4
+cron-descriptor==1.4.0
 cryptography==41.0.1
 Django==4.2.2
+django-celery-beat==2.5.0
+django-celery-results==2.5.1
 django-cors-headers==4.0.0
 django-filter==23.2
 django-redis==5.2.0
 django-resized==1.0.2
 django-ses==3.5.0
 django-storages==1.13.2
+django-timezone-field==5.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.5
 firebase-admin==6.0.0
+Flask==2.3.2
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.10
+flower==2.0.0
+gevent==22.10.2
+geventhttpclient==2.0.9
 google-api-core==2.11.0
 google-api-python-client==2.88.0
 google-auth==2.19.1
@@ -32,44 +51,60 @@ google-cloud-storage==2.9.0
 google-crc32c==1.5.0
 google-resumable-media==2.5.0
 googleapis-common-protos==1.59.0
+greenlet==2.0.2
 grpcio==1.54.2
 grpcio-status==1.54.2
 gunicorn==20.1.0
 h2==2.6.2
 hpack==3.0.0
 httplib2==0.22.0
+humanize==4.6.0
 hyper==0.7.0
 hyperframe==3.2.0
 idna==3.4
 inflection==0.5.1
+itsdangerous==2.1.2
 itypes==1.2.0
 Jinja2==3.1.2
 jmespath==1.0.1
+kombu==5.3.1
+locust==2.15.1
 MarkupSafe==2.1.3
 msgpack==1.0.5
 mysqlclient==2.1.1
 packaging==23.1
 Pillow==9.5.0
+prometheus-client==0.17.0
+prompt-toolkit==3.0.38
 proto-plus==1.22.2
 protobuf==4.23.2
+psutil==5.9.5
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
-PyJWT==1.7.1
+PyJWT==2.7.0
 pyparsing==3.0.9
+python-crontab==2.7.1
 python-dateutil==2.8.2
 pytz==2023.3
+pyzmq==25.1.0
 redis==4.5.5
 requests==2.31.0
+roundrobin==0.0.4
 rsa==4.9
 ruamel.yaml==0.17.31
 ruamel.yaml.clib==0.2.7
 s3transfer==0.6.1
 six==1.16.0
 sqlparse==0.4.4
+tornado==6.3.2
 typing_extensions==4.6.3
+tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.16
-celery
-django-celery-beat
-django-celery-results
+vine==5.0.0
+watchtower==3.0.1
+wcwidth==0.2.6
+Werkzeug==2.3.6
+zope.event==5.0
+zope.interface==6.0
